<resources>
    <string name="app_name">LocMess</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_locations_menu">LocationsMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="content">Message</string>
    <string name="message_lifespan">Duration (seconds): </string>
    <string name="message_hint">Hello world!</string>
    <string name="location">Location</string>
    <string name="select_location">select location</string>
    <string name="policy">Policy</string>
    <string name="add">Add</string>
    <string name="bssid_ssid">BSSID, SSID</string>
    <string name="bssid_ssid_image">Bssid ssid image</string>
    <string name="name">Name:</string>
    <string name="latitude">Latitude:</string>
    <string name="longtitude">Longtitude:</string>
    <string name="radius">Radius:</string>
    <string name="title_activity_edit_policy">Edit Policy</string>
    <string name="gps_coordinates">GPS Coordinates:</string>
    <string name="ssid">SSID:</string>
    <string name="bssid">BSSID:</string>
    <string name="gps_et_hint">Longtitude, Latitude, Radius</string>
    <string name="ssid_et_hint">Eduroam</string>
    <string name="bssid_et_hint">00:11:22:33:44:55</string>
    <string name="policy_centralized">Centralized</string>
    <string name="policy_decentralized">Decentralized</string>
</resources>
