<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/bssid_ssid_image"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/bssid_ssid_image"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bssid_ssid_title"
        android:text="@string/bssid_ssid"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp" />

    <GridLayout
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/name_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/gps_coordinates"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/gps_et_hint"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:digits="0123456789,."
            android:id="@+id/gps_coords_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/ssid"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/ssid_et_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:id="@+id/ssid_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/bssid"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/bssid_et_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:id="@+id/bssid_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <!--<TextView-->
            <!--android:text="@string/radius"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="wrap_content"/>-->

        <!--<EditText-->
            <!--android:inputType="number"-->
            <!--android:id="@+id/radius_et"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"/>-->

    </GridLayout>

</LinearLayout>