<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:text="@string/title"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:inputType="text"
            android:id="@+id/message_title_et"
            android:singleLine="true"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/location"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/location_name"
            android:text="@string/select_location"
            android:onClick="selectLocation"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/select_policy"
                android:onClick="selectPolicy"
                android:text="@string/policy"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/mode_spinner"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:textStyle="bold"
                android:text="@string/message_lifespan"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/message_lifespan"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:textStyle="bold"
            android:text="@string/content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/message_content"
            android:hint="@string/message_hint"/>

    </LinearLayout>


    <Button
        android:text="@string/confirm"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="postMesage"/>

</RelativeLayout>